--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
     <!--link dibawah digunakan untuk memberikan fungsi PWA yaitu mengubah aplikasi web menjadi seperti aplikasi native dengan dapat diinstall pada home dekstop-->
     <link rel="manifest" href="/js/web.webmanifest">
